# Data-Parsing-Tool

./: .gitignore  CMakeLists.txt  README.md
doc/: 数据可视化组件.excalidraw  文件结构.txt  设计模式应用.txt
include/core/: ApplicationConfig.h  CoreToQtAdapter.h  MainWindow.h
include/data/: CSVDataSource.h  CustomDataSource.h  DataModel.h  DataParser.h  DataSource.h  DataSourceFactory.h  RealTimeDataSource.h
include/plugins/: ExportPlugin.h  FilterPlugin.h  InterpolationPlugin.h  PluginInterface.h  PluginManager.h
include/visualization/: ChartManager.h  InteractionHandler.h  PlotWidget.h
resource/: vive_traj_1_filtered.csv  vive_traj_2.csv
resource/csv/: vive_traj_1.csv  vive_traj_3.csv
src/: main.cpp
src-bk/ui/: CMakeLists.txt
src/core/: ApplicationConfig.cpp  CoreToQtAdapter.cpp  MainWindow.cpp
src/data/: CSVDataSource.cpp  CustomDataSource.cpp  DataModel.cpp  DataParser.cpp  DataSourceFactory.cpp  RealTimeDataSource.cpp
src/plugins/: ExportPlugin.cpp  FilterPlugin.cpp  InterpolationPlugin.cpp  PluginManager.cpp
src/ui/: CMakeLists.txt  csv_parser.cpp  csv_parser.h  main_window.cpp  main_window.h  main_window.ui
src/visualization/: ChartManager.cpp  InteractionHandler.cpp  PlotWidget.cpp
test/: CMakeLists-bk.txt
test/src-bk/algorithm/: CMakeLists.txt
test/src-bk/ui/: csv_parser.h
